--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -14,7 +14,7 @@
       <i class="fa fa-money fa-2x" style="color:#EE4D52;" bindtap="my_orders"></i>
     </van-col>
     <van-col span="5">
-      <i class="fa fa-history fa-2x" style="color:#259B24;"></i>
+      <i class="fa fa-history fa-2x" style="color:#259B24;"bindtap="history_orders"></i>
     </van-col>
   </van-row>
 </view>
@@ -49,6 +49,9 @@
     <van-col span="5">
       <i class="fa fa-book fa-2x" style="color:#3F51B5;" bindtap="repair_records"></i>
     </van-col>
+    <van-col span="5">
+      <i class="fa fa-address-book fa-2x" style="color:#3F51B5;" bindtap=" history_repair_records"></i>
+    </van-col>
   </van-row>
 </view>
 
@@ -62,6 +65,9 @@
     </van-col>
     <van-col span="5">
       <text>维修记录</text>
+    </van-col>
+    <van-col span="5">
+      <text>历史维修</text>
     </van-col>
   </van-row>
 </view>
