--- a/miniprogram/pages/myOrderDetails/myOrderDetails.wxml
+++ b/miniprogram/pages/myOrderDetails/myOrderDetails.wxml
@@ -1,32 +1,36 @@
 
 <view class="title">
-<view><text>进行中，技术员张三前往现场</text></view>
-<view class="title_time"><text>2019-4-1 10:23:04</text></view>
+<view><text>保修单进行中</text></view>
+<view class="title_time"><text>{{ createtime }}</text></view>
 </view>
 <view class="header">
 <view class="header_left">
-<i class="fa fa-clock-o fa-2x" style="color:#03A9F4;"></i><text>建设局</text></view>
-<view class="header_right"><text>No.20190723001</text></view>
+<i class="fa fa-clock-o fa-2x" style="color:#03A9F4;"></i><text>{{ facilityOrg }}</text></view>
+<view class="header_right"><text>No.{{report_id}}</text></view>
 </view>
 <view>
-  <van-cell-group>
-    <van-field value="2112232121" label="设备id" disabled/>
-    <van-field value="打印机" label="设备类型" disabled/>
-    <van-field value="NPH-220打印机" label="设备名称" disabled/>
-    <van-field value="联想" label="设备品牌" disabled/>
-    <van-field value="建设局" label="设备单位" disabled/>
-    <van-field value="地理信息测绘" label="设备部门" disabled/>
+ <van-cell-group>
+    <van-field value="{{ facilityid }}" label="设备id" disabled/>
+    <van-field value="{{ facilityType }}" label="设备类型" disabled/>
+    <van-field value="{{ facilityName }}" label="设备名称" disabled/>
+    <van-field value="{{ brandName }}" label="设备品牌" disabled/>
+    <van-field value="{{ address }}" label="详细地址" disabled/>
   </van-cell-group>
 </view>
+
+<view wx:if="{{!imagePath==''}}">
 <view class="image">
-<text>附件图片</text>
-<image bindtap="imgYu" mode="aspectFit" data-src="{{dImg}}" src="{{dImg}}"></image>
+<text>上传的图片</text>
+<image bindtap="imgYu" mode="aspectFit" data-src="{{imagePath}}" src="{{imagePath}}"></image>
 </view>
+</view>
+
+
 <view class="problem"><text>问题描述</text></view>
 <view>
 <van-cell-group>
   <van-field
-    value="{{ message }}"
+    value="{{ problemDetail }}"
     type="textarea"
     autosize="{{autosize}}"
     border
@@ -35,20 +39,23 @@
   />
 </van-cell-group>
 </view>
+
+
 <view>
 <van-cell-group>
   <van-field
-    value="{{ username }}"
+    value="{{ rej_reason }}"
     required
     clearable
     label="退回原因"
     icon="question-o"
     placeholder="请输入退回报修单的原因"  
+    bind:input="reject"
   />
   </van-cell-group>
-
-
 </view>
+
+
   <view class="button">
 <van-button size="large" type="info" bind:click="return_order">退回</van-button>
 </view>
