--- a/miniprogram/pages/repairRecords/repairRecords.wxml
+++ b/miniprogram/pages/repairRecords/repairRecords.wxml
@@ -1,18 +1,17 @@
-<view class="icon1">
-  <i class="fa fa-keyboard-o fa-2x" style="color:#03A9F4;"></i>
-  <text>{{facilityName}}</text>
+<view class="header">
+<view class="header_left">
+<i class="fa fa-clock-o fa-2x" style="color:#03A9F4;"></i><text>{{ facilityOrg }}</text></view>
+<view class="header_right"><text>No.{{report_id}}</text></view>
 </view>
 
-<view class="facilityid">
-  <text>报修单号：{{facilityid}}</text>
-</view>
 <view>
   <van-cell-group>
     <van-field value="{{ facilityid }}" label="设备id" disabled/>
-    <van-field value="{{ facilityName }}" label="设备类型" disabled/>
-    <van-field value="{{ brandName }}" label="使用单位" disabled/>
-    <van-field value="{{ facilityOrg }}" label="设备地址" disabled/>
-    <van-field value="{{ facilityType }}" label="报修时间" disabled/>
+    <van-field value="{{ facilityType }}" label="设备类型" disabled/>
+    <van-field value="{{ facilityName }}" label="设备名称" disabled/>
+    <van-field value="{{ brandName }}" label="设备品牌" disabled/>
+    <van-field value="{{ address }}" label="详细地址" disabled/>
+    <van-field value="{{ createtime }}" label="报修时间" disabled/>
   </van-cell-group>
 </view>
 <view class="label">
@@ -30,15 +29,15 @@
   <picker mode="date" value="{{date}}" start="{{currentDate}}" bindchange="bindDateChange">
     <view class="picker">
     <text> * </text>选择时间:
-       {{date}}
+       {{next_date}}
     </view>
   </picker>
 </view>
 
 <view class='son_view'>
  
-    <view class="title-bg">维修描述</view>
-    <textarea class="textarea-bg" maxlength="200" placeholder="简单描述设备的问题及其解决方案" bindblur="getDataBindTap" />
+<view class="title-bg">维修描述</view>
+  <textarea class="textarea-bg" maxlength="200" placeholder="简单描述设备的问题及其解决方案" bindinput="solutionIn" />
  
 </view>
 
