信息中心_报修审核

--- a/miniprogram/customer/cusHistory/cusHistory.wxml
+++ b/miniprogram/customer/cusHistory/cusHistory.wxml
@@ -1,6 +1,6 @@
 
 <view  wx:for="{{newHistoryOrders}}" wx:key="{{index}}">
-<navigator url="../historyRepairRecords/historyRepairRecords?report_id={{item.report_id}}" class="title">
+<navigator url="../../cusService/historyRepairRecords/historyRepairRecords?report_id={{item.report_id}}" class="title">
 <view class="left">
 <i class="fa fa-flag fa-2x" style="color:#FFFFFF;"></i>
 <text>{{item.facilityOrg}}</text>
