--- a/miniprogram/pages/logIn/logIn.wxss
+++ b/miniprogram/pages/logIn/logIn.wxss
@@ -100,3 +100,11 @@ page{
   margin-top:15rpx;
 
 }
+.review {
+  color: #03A9F4;
+  font-size: 35rpx;
+  margin-left:35rpx;
+  margin-top:15rpx;
+  margin-bottom:35rpx;
+
+}
