--- a/miniprogram/pages/reviewIndex/reviewIndex.wxml
+++ b/miniprogram/pages/reviewIndex/reviewIndex.wxml
@@ -8,7 +8,7 @@
       <i class="fa fa-address-card-o fa-2x" style="color:#FF9800;" bindtap="order_approval"></i>
     </van-col>
     <van-col span="6" offset="3">
-      <i class="fa fa-history fa-2x" style="color:#259B24;" bindtap="order_history"></i>
+      <i class="fa fa-history fa-2x" style="color:#259B24;" bindtap="repaire_history"></i>
     </van-col>
   </van-row>
 </view>
