--- a/miniprogram/infoCenter/approverSet/approverSet.wxml
+++ b/miniprogram/infoCenter/approverSet/approverSet.wxml
@@ -3,16 +3,16 @@
 </view>
 <view>
   <van-cell-group>
-    <van-field value="李国强" label="打印机："border="{{ false }}" use-button-slot disabled>
-    <van-button slot="button" size="small" type="warning" bind:click="printer">修改/查看</van-button> </van-field>
+    <van-field value="{{printer}}" label="打印机："border="{{ false }}" placeholder="请添加审核人" use-button-slot disabled>
+    <van-button slot="button" size="small" type="warning" bind:click="printer">添加/修改</van-button> </van-field>
 
-    <van-field value="周丽" label="复印机："border="{{ false }}" use-button-slot disabled>
-    <van-button slot="button" size="small" type="warning" bind:click="duplicator">修改/查看</van-button> </van-field>
+    <van-field value="{{duplicator}}" label="复印机："border="{{ false }}" placeholder="请添加审核人" use-button-slot disabled>
+    <van-button slot="button" size="small" type="warning" bind:click="duplicator">添加/修改</van-button> </van-field>
 
-    <van-field value="林丽萍" label="电脑："border="{{ false }}" use-button-slot disabled>
-    <van-button slot="button" size="small" type="warning" bind:click="computer">修改/查看</van-button> </van-field>
+    <van-field value="{{computer}}" label="电脑："border="{{ false }}" placeholder="请添加审核人" use-button-slot disabled>
+    <van-button slot="button" size="small" type="warning" bind:click="computer">添加/修改</van-button> </van-field>
 
-    <van-field value="吕小兵" label="其他设备："border="{{ false }}" use-button-slot disabled>
-    <van-button slot="button" size="small" type="warning" bind:click="other">修改/查看</van-button> </van-field>
+    <van-field value="{{other}}" label="其他设备："border="{{ false }}" placeholder="请添加审核人" use-button-slot disabled>
+    <van-button slot="button" size="small" type="warning" bind:click="other">添加/修改</van-button> </van-field>
   </van-cell-group>
 </view>
