--- a/miniprogram/cusService/myrecallDetails/myrecallDetails.wxml
+++ b/miniprogram/cusService/myrecallDetails/myrecallDetails.wxml
@@ -16,22 +16,12 @@
     <van-field value="{{ brandName }}" label="设备品牌" disabled/>
     <van-field value="{{ address }}" label="详细地址" disabled/>
     <van-field value="{{ contactor }}" label="联系人" disabled/>
-    <van-field value="{{ phone }}" label="联系电话" disabled/>
+    <van-field value="{{ phone }}" label="联系电话" icon="phone-o" bind:click-icon="makeCall" disabled/>
   </van-cell-group>
 </view>
-
-<view class="problem"><text>上次维修备注</text></view>
-<view>
-<van-cell-group>
-  <van-field
-    value="{{ problemDetail }}"
-    type="textarea"
-    autosize="{{autosize}}"
-    border
-    disabled
-    placeholder="未填写维修备注"
-  />
-</van-cell-group>
+<view> 
+    <view class="problem-desc">上次维修备注</view>
+    <textarea class="textarea-bg"  maxlength="200" value="{{ problemDetail }}" disabled="true"/> 
 </view>
 
 
@@ -50,7 +40,7 @@
 </view>
 
 
-  <view class="button">
+<view class="button">
 <van-button size="large" type="info" bind:click="return_order">退回</van-button>
 </view>
 
