--- a/miniprogram/customer/scanReport/scanReport.wxml
+++ b/miniprogram/customer/scanReport/scanReport.wxml
@@ -38,8 +38,8 @@
 </view>
 
 
-<view class='son_view'> 
-    <view class="title-bg">问题描述</view>
+<view> 
+    <view class="problem-desc"><text>问题描述</text></view>
     <textarea class="textarea-bg"  maxlength="200" placeholder="简单描述设备的问题" bindinput="getDataBindTap" /> 
 </view>
 
