--- a/miniprogram/manager/recallDetail/recallDetail.wxml
+++ b/miniprogram/manager/recallDetail/recallDetail.wxml
@@ -16,7 +16,7 @@
     <van-field value="{{ brandName }}" label="设备品牌" disabled/>
     <van-field value="{{ address }}" label="详细地址" disabled/>
     <van-field value="{{ contactor }}" label="联系人" disabled/>
-    <van-field value="{{ phone }}" label="联系电话" disabled/>
+    <van-field value="{{ phone }}"  label="联系电话" icon="phone-o" bind:click-icon="makeCall" disabled/>
   </van-cell-group>
 </view>
 
