--- a/miniprogram/cusService/recalhistoryRecords/recalhistoryRecords.wxml
+++ b/miniprogram/cusService/recalhistoryRecords/recalhistoryRecords.wxml
@@ -14,6 +14,8 @@
     <van-field value="{{ address }}" label="详细地址" disabled/>
     <van-field value="{{ contactor }}" label="联系人" disabled/>
     <van-field value="{{ phone }}" label="联系电话" disabled/>
-     <van-field value="{{ comment }}" label="维修记录" disabled/>
+    <van-field value="{{ comment }}" label="维修记录" required disabled/>
+    <van-field value="{{ assignName }}" label="技术员" required disabled/>
+
   </van-cell-group>
 </view>
