--- a/miniprogram/manager/createOrder/createOrder.wxml
+++ b/miniprogram/manager/createOrder/createOrder.wxml
@@ -3,12 +3,11 @@
 </view>
 
 <van-cell-group>
-   <van-field value="{{ facilityid }}" required disabled label="设备id"/>
   <van-field value="{{ facilityName }}" bind:input="facilityName" required clearable label="设备名称" placeholder="请输入设备名称" />
     <van-field value="{{ brandName }}" bind:input="brandName" required clearable label="设备品牌" placeholder="请输入设备品牌" />
-  <van-field value="{{ address }}" bind:input="address" required clearable label="设备地址" placeholder="请输入设备详细地址" />
+  <van-field value="{{ address }}" bind:input="address" required clearable label="详细地址" placeholder="请输入设备详细地址" />
   <van-field value="{{ contactor }}" bind:input="contactor" required clearable label="设备联系人" placeholder="请输入设备联系人" />
-    <van-field value="{{ phone }}" bind:input="phone" required clearable label="联系电话" placeholder="请输入联系电话" />
+    <van-field value="{{ phone }}" bind:input="phone" required clearable label="客户电话" placeholder="请输入联系电话" />
       <van-field value="{{ facilityOrg }}" bind:input="facilityOrg" required clearable label="设备单位" placeholder="请输入设备使用单位" />
 </van-cell-group>
 
@@ -20,7 +19,6 @@
 </scroll-view>
 </view>
 
-
 <view class="section">
   <text>请选择设备类型</text>
   <picker bindchange="bindPickerChange" value="{{index}}" range="{{array}}">
@@ -29,7 +27,10 @@
     </view>
   </picker>
 </view>
-
+<view> 
+    <view class="problem-desc">问题描述</view>
+    <textarea class="textarea-bg"  maxlength="200" value="{{ problemDetail }}" bindinput="descIn"/> 
+</view>
 
 <view class="button">
 <van-button size="large" type="info" bind:click="submit_info">提交</van-button>
