--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -18,6 +18,9 @@
   margin: 20rpx;
   font-size: 32rpx;
   color:red;
+   border: 1px solid rgb(165, 165, 165);
+  height: 45px;
+  width: 90%;
 }
 .problem-desc{
   margin-left: 30rpx;
