--- a/miniprogram/customer/reportOrder/reportOrder.wxml
+++ b/miniprogram/customer/reportOrder/reportOrder.wxml
@@ -1,6 +1,6 @@
 <view class="icon1">
   <i class="fa fa-globe fa-2x" style="color:#03A9F4;"></i>
-  <text>报修订单状态：{{status}}</text>
+  <text>{{status}}</text>
   <view class="createtime"><text>发布时间：{{createtime}}</text></view>
 </view>
 
@@ -10,13 +10,14 @@
 
 
 <van-cell-group>
-  <van-field value="{{ facilityid }}" label="设备id" disabled/>
+<van-field value="{{ assignName }}" label="分配技术员" placeholder="待分配" disabled/>
+<van-field value="{{ assignPhone }}" label="技术员电话" placeholder="略" disabled/>
   <van-field value="{{ facilityName }}" label="设备名称" disabled/>
   <van-field value="{{ brandName }}" label="设备品牌" disabled/>
   <van-field value="{{ facilityType }}" label="设备类型" disabled/>
   <van-field value="{{ facilityOrg }}" label="设备单位" disabled/>
   <van-field value="{{ address }}" label="设备详细地址" disabled/>
-<van-field value="{{ contactor }}" label="联系人" disabled/>
+<van-field value="{{ contactor }}" label="设备联系人" disabled/>
 <van-field value="{{ phone }}" label="联系电话" disabled/>
 </van-cell-group>
 
@@ -31,6 +32,6 @@
 
 <view> 
     <view class="problem-desc">问题描述</view>
-    <textarea class="textarea-bg"  maxlength="200" value="{{ problemDetail }}"/> 
+    <textarea class="textarea-bg"  maxlength="200" value="{{ problemDetail }}" disabled="true"/>
 </view>
 
