--- a/miniprogram/manager/recallDetail/recallDetail.wxml
+++ b/miniprogram/manager/recallDetail/recallDetail.wxml
@@ -14,22 +14,37 @@
     <van-field value="{{ facilityType }}" label="设备类型" disabled/>
     <van-field value="{{ facilityName }}" label="设备名称" disabled/>
     <van-field value="{{ brandName }}" label="设备品牌" disabled/>
+    <van-field value="{{ contactor }}" label="设备联系人" disabled/>
+    <van-field value="{{ phone }}" label="联系电话" icon="phone-o" bind:click-icon="makeCall" disabled/>
     <van-field value="{{ address }}" label="详细地址" disabled/>
-    <van-field value="{{ contactor }}" label="联系人" disabled/>
-    <van-field value="{{ phone }}"  label="联系电话" icon="phone-o" bind:click-icon="makeCall" disabled/>
+     <van-field
+    value="{{ comment }}"
+    center
+    required
+    label="设置完成"
+    placeholder="请输入完成原因"
+    border="{{ false }}"
+    use-button-slot
+    bind:input="commentIn"
+  >
+    <van-button slot="button" size="small" type="primary" bind:click="setComplete">报单完成</van-button>
+  </van-field>
   </van-cell-group>
 </view>
+<view> 
+    <view class="problem-desc">上次维修备注</view>
+    <textarea class="textarea-bg"  maxlength="200" value="{{ problemDetail }}" disabled="true"/> 
+</view>
+<view class="problem"><text>现在手上无报修单的销售有:</text></view>
 
-<view class="problem"><text>上次维修备注</text></view>
-<view>
-<van-cell-group>
-  <van-field
-    value="{{ problemDetail }}"
-    type="textarea"
-    autosize="{{autosize}}"
-    border
-    disabled
-    placeholder="未填写维修备注"
-  />
-</van-cell-group>
+<view class="name">
+<van-grid column-num="5" border="{{ false }}">
+  <van-grid-item use-slot wx:for="{{ staffs }}" wx:key="{{index}}" bind:click="assign" data-name="{{item.name}}">
+    <image
+      style="width: 100%; height: 45px;"
+      src="{{item.avatarUrl}}"
+    />
+    <text>{{item.name}}</text>
+  </van-grid-item>
+</van-grid>
 </view>
